[package]
name = "fastbloom_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fastbloom_rs"
crate-type = ["cdylib"]

[dependencies]
fastbloom-rs = { path = "fastbloom-rs" }

[dependencies.pyo3]
version = "0.16"
features = ["extension-module", "abi3-py37"]

[dev-dependencies]
criterion = "0.3.5"
getrandom = { version = "0.2.6" }
siphasher = "0.3.10"
fastmurmur3 = "0.1.2"
fxhash = "0.2.1"
crc32fast = "1.3.2"


[workspace]
members = ["fastbloom-rs"]

[[bench]]
name = "fastbloom"
harness = false
