[package]
name = "fastbloom_rs"
version = "0.5.0"
edition = "2021"
authors = ["Yan Kun <yan_kun_1992@foxmail.com>"]
description = "Some fast bloom filter implemented by Rust for Python and Rust! 10x faster than pybloom!"
documentation = "https://github.com/yankun1992/fastbloom"
readme = "README.md"
homepage = "https://github.com/yankun1992/fastbloom"
repository = "https://github.com/yankun1992/fastbloom"
license-file = "LICENSE"
keywords = ["bloom-filter", "bloom", "filter", "bloomfilter", "probabilistic data structure", "counting-bloom-filter"]
categories = ["bloom-filter"]
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fastbloom_rs"
crate-type = ["cdylib"]

[dependencies]
fastbloom-rs = { path = "fastbloom-rs" }

[dependencies.pyo3]
version = "0.17"
features = ["extension-module", "abi3-py37"]

[dev-dependencies]
criterion = "0.4.0"
getrandom = { version = "0.2.7" }
siphasher = "0.3.10"
fastmurmur3 = "0.1.2"
fxhash = "0.2.1"
crc32fast = "1.3.2"
twox-hash = "1.6.3"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }


[workspace]
members = ["fastbloom-rs"]

[[bench]]
name = "fastbloom"
harness = false
