[project]
name = "fastbloom_rs"
classifiers = ["Programming Language :: Python"]
requires-python = ">=3.7"
license = { file = "LICENSE" }
authors = [
    { email = "1939810907@qq.com" },
    { name = "Yan Kun" }
]
maintainers = [
    { name = "Yan Kun", email = "1939810907@qq.com" }
]

[project.optional-dependencies]
test = [
    "pytest <= 7.1.1",
    "pybloom_live"
]

[project.urls]
homepage = "https://github.com/yankun1992/fastbloom"
documentation = "https://github.com/yankun1992/fastbloom/blob/main/README.md"
repository = "https://github.com/yankun1992/fastbloom"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"

[tool.maturin]
# Cargo manifest path
manifest-path = "./Cargo.toml"
# Include arbitrary files in the sdist
sdist-include = []
# Bindings type
bindings = "pyo3"
# Control the platform tag on linux
compatibility = "manylinux2014"
# Don't check for manylinux compliance
skip-auditwheel = false
# Strip the library for minimum file size
strip = true
# Extra arguments that will be passed to cargo as `cargo rustc [...] [arg1] [arg2] -- [...]`
cargo-extra-args = ""
# Extra arguments that will be passed to rustc as `cargo rustc [...] -- [...] [arg1] [arg2]`
rustc-extra-args = ""