[package]
name = "fastbloom-rs"
version = "0.3.1"
edition = "2021"
authors = ["Yan Kun <1939810907@qq.com>"]
description = "Some fast bloom filter implemented by Rust for Python and Rust!"
documentation = "https://docs.rs/fastbloom-rs"
readme = "../README.md"
homepage = "https://github.com/yankun1992/fastbloom"
repository = "https://github.com/yankun1992/fastbloom"
license-file = "../LICENSE"
keywords = ["bloom-filter", "bloom", "filter", "bloomfilter", "countingbloomfilter"]
categories = ["algorithms", "data-structures"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastmurmur3 = "0.1.2"
cuckoofilter = "0.5.0"
xorfilter-rs = "0.5.1"