[package]
name = "fastbloom-rs"
version = "0.5.9"
edition = "2021"
authors = ["Yan Kun <yan_kun_1992@foxmail.com>"]
description = "Some fast bloom filter implemented by Rust for Python and Rust!"
documentation = "https://docs.rs/fastbloom-rs"
readme = "../README.md"
homepage = "https://github.com/yankun1992/fastbloom"
repository = "https://github.com/yankun1992/fastbloom"
license-file = "../LICENSE"
keywords = ["bloom-filter", "bloom", "filter", "bloomfilter", "countingbloomfilter"]
categories = ["algorithms", "data-structures"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastmurmur3 = "0.2.0"
cuckoofilter = "0.5.0"
xorfilter-rs = "0.5.1"
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
serde = { version = "1.0.185", features = ["derive"], optional = true }

[features]
serde = ["dep:serde"]
